# number-guessing-game

./: .gitignore  LICENSE  README.md  pyproject.toml
number_guessing_game/: __main__.py
